kubernetes/traefik/custom-ingress-routes/fern.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: fern
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`fern.skippythesnake.com`)
      kind: Rule
      services:
        - name: fern-server

---
apiVersion: v1
kind: Service
metadata:
  name: fern-server
  namespace: traefik
spec:
  type: ExternalName
  externalName: fern.lan
