kubernetes/traefik/custom-ingress-routes/ivy.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ivy
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ivy.skippythesnake.com`)
      kind: Rule
      services:
        - name: ivy-service
          port: 8006
          scheme: https

---
apiVersion: v1
kind: Service
metadata:
  name: ivy-service
  namespace: traefik
spec:
  type: ExternalName
  externalName: ivy.lan
