kubernetes/traefik/custom-ingress-routes/nas.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nas
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nas.skippythesnake.com`)
      kind: Rule
      services:
        - name: nas-server
          port: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: nas-server
  namespace: traefik
spec:
  type: ExternalName
  externalName: nas.lan
