kubernetes/traefik/custom-ingress-routes/nia.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nia
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nia.skippythesnake.com`)
      kind: Rule
      services:
        - name: nia-service
          port: 8006
          scheme: https

---
apiVersion: v1
kind: Service
metadata:
  name: nia-service
  namespace: traefik
spec:
  type: ExternalName
  externalName: nia.lan
